--- a/111502_SystemCode(18)/app/src/main/res/layout/activity_main_i.xml
+++ b/111502_SystemCode(18)/app/src/main/res/layout/activity_main_i.xml
@@ -19,7 +19,7 @@
         app:layout_constraintVertical_bias="1.0" />
 
     <ImageButton
-        android:id="@+id/imageButton70"
+        android:id="@+id/imageButtonToPageJI"
         android:layout_width="68dp"
         android:layout_height="69dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -32,7 +32,7 @@
         tools:srcCompat="@drawable/ic_baseline_group_24" />
 
     <ImageButton
-        android:id="@+id/imageButton71"
+        android:id="@+id/imageButtonToPageOI"
         android:layout_width="68dp"
         android:layout_height="69dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -45,7 +45,7 @@
         tools:srcCompat="@drawable/ic_baseline_person_24" />
 
     <ImageButton
-        android:id="@+id/imageButton72"
+        android:id="@+id/imageButtonToPageHI"
         android:layout_width="68dp"
         android:layout_height="69dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -58,7 +58,7 @@
         tools:srcCompat="@drawable/ic_baseline_360_24" />
 
     <ImageButton
-        android:id="@+id/imageButton73"
+        android:id="@+id/imageButtonToPageAI"
         android:layout_width="68dp"
         android:layout_height="69dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -71,7 +71,7 @@
         tools:srcCompat="@drawable/ic_baseline_house_24" />
 
     <ImageButton
-        android:id="@+id/imageButton74"
+        android:id="@+id/imageButtonToPageBI"
         android:layout_width="68dp"
         android:layout_height="69dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -84,7 +84,7 @@
         tools:srcCompat="@drawable/ic_baseline_local_hospital_24" />
 
     <TextView
-        android:id="@+id/textView94"
+        android:id="@+id/textViewToPageBI"
         android:layout_width="49dp"
         android:layout_height="18dp"
         android:text="保健區"
@@ -96,7 +96,7 @@
         app:layout_constraintVertical_bias="0.992" />
 
     <TextView
-        android:id="@+id/textView95"
+        android:id="@+id/textViewToPageJI"
         android:layout_width="50dp"
         android:layout_height="15dp"
         android:text="領養區"
@@ -108,7 +108,7 @@
         app:layout_constraintVertical_bias="0.99" />
 
     <TextView
-        android:id="@+id/textView97"
+        android:id="@+id/textViewToPageOI"
         android:layout_width="63dp"
         android:layout_height="16dp"
         android:text="個人資料"
@@ -120,7 +120,7 @@
         app:layout_constraintVertical_bias="0.99" />
 
     <TextView
-        android:id="@+id/textView96"
+        android:id="@+id/textViewToPageAI"
         android:layout_width="63dp"
         android:layout_height="16dp"
         android:text="動態消息"
@@ -132,7 +132,7 @@
         app:layout_constraintVertical_bias="0.99" />
 
     <TextView
-        android:id="@+id/textView99"
+        android:id="@+id/textViewToPageHI"
         android:layout_width="63dp"
         android:layout_height="16dp"
         android:text="殯葬服務"
@@ -143,7 +143,7 @@
         app:layout_constraintVertical_bias="0.99" />
 
     <ImageButton
-        android:id="@+id/imageButton69"
+        android:id="@+id/imageButtonADI"
         android:layout_width="387dp"
         android:layout_height="65dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -179,7 +179,7 @@
         app:srcCompat="@drawable/ic_baseline_west_24" />
 
     <TextView
-        android:id="@+id/textView91"
+        android:id="@+id/textViewTitleI"
         android:layout_width="54dp"
         android:layout_height="34dp"
         android:text="火葬"
@@ -194,7 +194,7 @@
         app:layout_constraintVertical_bias="0.022" />
 
     <TextView
-        android:id="@+id/textView93"
+        android:id="@+id/textViewTextI"
         android:layout_width="324dp"
         android:layout_height="353dp"
         android:text="寵物火化方式與人類大致相同:  ‧ 選擇日期：挑選欲火化與下葬的吉日。  ‧ 告別式：寵物火化前會舉辦告別式，讓飼主追思道別。  ‧ 火化與撿骨：將大體移至火化爐進行寵物火化儀式與撿骨。  ‧ 進塔：將骨灰裝入骨灰罈內保存，進入塔位安厝。寵物火化方式與人類大致相同:  ‧ 選擇日期：挑選欲火化與下葬的吉日。  ‧ 告別式：寵物火化前會舉辦告別式，讓飼主追思道別。  ‧ 火化與撿骨：將大體移至火化爐進行寵物火化儀式與撿骨。  ‧ 進塔：將骨灰裝入骨灰罈內保存，進入塔位安厝。"
