--- a/111502_SystemCode(18)/app/src/main/res/layout/activity_main.xml
+++ b/111502_SystemCode(18)/app/src/main/res/layout/activity_main.xml
@@ -33,7 +33,7 @@
         app:layout_constraintVertical_bias="0.023" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName"
+        android:id="@+id/editTextSearchA"
         android:layout_width="304dp"
         android:layout_height="44dp"
         android:ems="10"
@@ -46,7 +46,7 @@
         app:layout_constraintVertical_bias="0.101" />
 
     <SearchView
-        android:id="@+id/searchView"
+        android:id="@+id/searchViewA"
         android:layout_width="26dp"
         android:layout_height="34dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -57,7 +57,7 @@
         app:layout_constraintVertical_bias="0.098" />
 
     <ImageButton
-        android:id="@+id/imageButton"
+        android:id="@+id/imageButtonCreatePostA"
         android:layout_width="49dp"
         android:layout_height="46dp"
         android:background="#00FFFFFF"
@@ -81,7 +81,7 @@
         app:layout_constraintVertical_bias="0.232" />
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/imageViewUserA1"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:background="#40C821"
@@ -94,7 +94,7 @@
         tools:srcCompat="@tools:sample/avatars" />
 
     <RadioButton
-        android:id="@+id/radioButton"
+        android:id="@+id/radioButtonGreatNumA1"
         android:layout_width="55dp"
         android:layout_height="28dp"
         android:text="讚"
@@ -118,7 +118,7 @@
         app:srcCompat="@android:drawable/ic_menu_share" />
 
     <Button
-        android:id="@+id/button6"
+        android:id="@+id/buttonShareA1"
         android:layout_width="73dp"
         android:layout_height="35dp"
         android:text="分享"
@@ -131,7 +131,7 @@
         app:layout_constraintVertical_bias="0.966" />
 
     <Button
-        android:id="@+id/button7"
+        android:id="@+id/buttonMessageA1"
         android:layout_width="73dp"
         android:layout_height="35dp"
         android:text="留言"
@@ -144,12 +144,12 @@
         app:layout_constraintVertical_bias="0.966" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/textViewGreatNumA1"
         android:layout_width="28dp"
         android:layout_height="25dp"
         android:text="100"
         app:layout_constraintBottom_toBottomOf="@+id/view"
-        app:layout_constraintEnd_toStartOf="@+id/radioButton"
+        app:layout_constraintEnd_toStartOf="@+id/radioButtonGreatNumA1"
         app:layout_constraintHorizontal_bias="0.071"
         app:layout_constraintStart_toStartOf="@+id/view"
         app:layout_constraintTop_toTopOf="@+id/view"
@@ -162,7 +162,7 @@
         android:layout_marginStart="88dp"
         android:layout_marginLeft="88dp"
         app:layout_constraintBottom_toBottomOf="@+id/view"
-        app:layout_constraintEnd_toStartOf="@+id/button7"
+        app:layout_constraintEnd_toStartOf="@+id/buttonMessageA1"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/view"
         app:layout_constraintTop_toTopOf="@+id/view"
@@ -170,7 +170,7 @@
         app:srcCompat="@android:drawable/stat_notify_chat" />
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/textViewUserNameA1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="割步霖"
@@ -182,7 +182,7 @@
         app:layout_constraintVertical_bias="0.066" />
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/textViewTagA1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="#各種有特色的標籤(紫色優)"
@@ -194,7 +194,7 @@
         app:layout_constraintVertical_bias="0.192" />
 
     <TextView
-        android:id="@+id/textView8"
+        android:id="@+id/textViewTextA1"
         android:layout_width="345dp"
         android:layout_height="83dp"
         android:text="非常具有創造性的內文~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~"
@@ -204,19 +204,6 @@
         app:layout_constraintStart_toStartOf="@+id/view"
         app:layout_constraintTop_toTopOf="@+id/view"
         app:layout_constraintVertical_bias="0.607" />
-
-    <Button
-        android:id="@+id/button8"
-        android:layout_width="59dp"
-        android:layout_height="27dp"
-        android:text="顯示更多的按鈕"
-        app:backgroundTint="#C8C8C8"
-        app:layout_constraintBottom_toBottomOf="@+id/textView8"
-        app:layout_constraintEnd_toEndOf="@+id/textView8"
-        app:layout_constraintHorizontal_bias="0.027"
-        app:layout_constraintStart_toStartOf="@+id/textView8"
-        app:layout_constraintTop_toTopOf="@+id/textView8"
-        app:layout_constraintVertical_bias="1.0" />
 
     <TextView
         android:id="@+id/textView9"
@@ -231,7 +218,7 @@
         app:layout_constraintVertical_bias="1.0" />
 
     <ImageButton
-        android:id="@+id/imageButton4"
+        android:id="@+id/imageButtonToPageJA"
         android:layout_width="68dp"
         android:layout_height="69dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -244,7 +231,7 @@
         tools:srcCompat="@drawable/ic_baseline_group_24" />
 
     <ImageButton
-        android:id="@+id/imageButton9"
+        android:id="@+id/imageButtonToPageBA"
         android:layout_width="68dp"
         android:layout_height="69dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -257,7 +244,7 @@
         tools:srcCompat="@drawable/ic_baseline_local_hospital_24" />
 
     <ImageButton
-        android:id="@+id/imageButton14"
+        android:id="@+id/imageButtonToPageHA"
         android:layout_width="68dp"
         android:layout_height="69dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -270,7 +257,7 @@
         tools:srcCompat="@drawable/ic_baseline_360_24" />
 
     <ImageButton
-        android:id="@+id/imageButton15"
+        android:id="@+id/imageButtonToPageOA"
         android:layout_width="68dp"
         android:layout_height="69dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -283,7 +270,7 @@
         tools:srcCompat="@drawable/ic_baseline_person_24" />
 
     <ImageButton
-        android:id="@+id/imageButton13"
+        android:id="@+id/imageButtonToPageAA"
         android:layout_width="68dp"
         android:layout_height="69dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -296,7 +283,7 @@
         tools:srcCompat="@drawable/ic_baseline_house_24" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/textViewToPageAA"
         android:layout_width="63dp"
         android:layout_height="16dp"
         android:text="動態消息"
@@ -308,7 +295,7 @@
         app:layout_constraintVertical_bias="0.99" />
 
     <TextView
-        android:id="@+id/textView10"
+        android:id="@+id/textViewToPageBA"
         android:layout_width="49dp"
         android:layout_height="18dp"
         android:text="保健區"
@@ -320,7 +307,7 @@
         app:layout_constraintVertical_bias="0.992" />
 
     <TextView
-        android:id="@+id/textView11"
+        android:id="@+id/textViewToPageHA"
         android:layout_width="63dp"
         android:layout_height="16dp"
         android:text="殯葬服務"
@@ -331,7 +318,7 @@
         app:layout_constraintVertical_bias="0.99" />
 
     <TextView
-        android:id="@+id/textView12"
+        android:id="@+id/textViewToPageJA"
         android:layout_width="50dp"
         android:layout_height="15dp"
         android:text="領養區"
@@ -343,7 +330,7 @@
         app:layout_constraintVertical_bias="0.99" />
 
     <TextView
-        android:id="@+id/textView13"
+        android:id="@+id/textViewToPageOA"
         android:layout_width="63dp"
         android:layout_height="16dp"
         android:text="個人資料"
@@ -353,5 +340,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.99" />
+
+    <TextView
+        android:id="@+id/textViewShowMoreA1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="顯示更多"
+        android:textSize="10sp"
+        app:layout_constraintBottom_toBottomOf="@+id/textViewTextA1"
+        app:layout_constraintEnd_toEndOf="@+id/textViewTextA1"
+        app:layout_constraintHorizontal_bias="0.003"
+        app:layout_constraintStart_toStartOf="@+id/textViewTextA1"
+        app:layout_constraintTop_toTopOf="@+id/textViewTextA1"
+        app:layout_constraintVertical_bias="1.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
