--- a/111502_SystemCode(18)/app/src/main/res/layout/activity_main_b.xml
+++ b/111502_SystemCode(18)/app/src/main/res/layout/activity_main_b.xml
@@ -19,7 +19,7 @@
         app:layout_constraintVertical_bias="1.0" />
 
     <ImageButton
-        android:id="@+id/imageButton28"
+        android:id="@+id/imageButtonToPageHB"
         android:layout_width="68dp"
         android:layout_height="69dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -32,7 +32,7 @@
         tools:srcCompat="@drawable/ic_baseline_360_24" />
 
     <ImageButton
-        android:id="@+id/imageButton29"
+        android:id="@+id/imageButtonToPageAB"
         android:layout_width="68dp"
         android:layout_height="69dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -45,7 +45,7 @@
         tools:srcCompat="@drawable/ic_baseline_house_24" />
 
     <ImageButton
-        android:id="@+id/imageButton30"
+        android:id="@+id/imageButtonJB"
         android:layout_width="68dp"
         android:layout_height="69dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -58,7 +58,7 @@
         tools:srcCompat="@drawable/ic_baseline_group_24" />
 
     <ImageButton
-        android:id="@+id/imageButton31"
+        android:id="@+id/imageButtonOB"
         android:layout_width="68dp"
         android:layout_height="69dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -71,7 +71,7 @@
         tools:srcCompat="@drawable/ic_baseline_person_24" />
 
     <ImageButton
-        android:id="@+id/imageButton32"
+        android:id="@+id/imageButtonToPageBB"
         android:layout_width="68dp"
         android:layout_height="69dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -99,7 +99,7 @@
         app:layout_constraintVertical_bias="0.023" />
 
     <TextView
-        android:id="@+id/textView44"
+        android:id="@+id/textViewToPageAB"
         android:layout_width="63dp"
         android:layout_height="16dp"
         android:text="動態消息"
@@ -111,7 +111,7 @@
         app:layout_constraintVertical_bias="0.99" />
 
     <TextView
-        android:id="@+id/textView45"
+        android:id="@+id/textViewToPageHB"
         android:layout_width="63dp"
         android:layout_height="16dp"
         android:text="殯葬服務"
@@ -122,7 +122,7 @@
         app:layout_constraintVertical_bias="0.99" />
 
     <TextView
-        android:id="@+id/textView46"
+        android:id="@+id/textViewToPageBB"
         android:layout_width="49dp"
         android:layout_height="18dp"
         android:text="保健區"
@@ -134,7 +134,7 @@
         app:layout_constraintVertical_bias="0.992" />
 
     <TextView
-        android:id="@+id/textView48"
+        android:id="@+id/textViewToPageJB"
         android:layout_width="50dp"
         android:layout_height="15dp"
         android:text="領養區"
@@ -146,7 +146,7 @@
         app:layout_constraintVertical_bias="0.99" />
 
     <TextView
-        android:id="@+id/textView49"
+        android:id="@+id/textViewToPageOB"
         android:layout_width="63dp"
         android:layout_height="16dp"
         android:text="個人資料"
@@ -158,7 +158,7 @@
         app:layout_constraintVertical_bias="0.99" />
 
     <ImageButton
-        android:id="@+id/imageButton16"
+        android:id="@+id/imageButtonToPageG"
         android:layout_width="332dp"
         android:layout_height="130dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -170,7 +170,7 @@
         tools:srcCompat="@tools:sample/backgrounds/scenic" />
 
     <ImageButton
-        android:id="@+id/imageButton22"
+        android:id="@+id/imageButtonADB"
         android:layout_width="387dp"
         android:layout_height="65dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -182,7 +182,7 @@
         tools:srcCompat="@tools:sample/backgrounds/scenic" />
 
     <ImageButton
-        android:id="@+id/imageButton12"
+        android:id="@+id/imageButtonToPageE"
         android:layout_width="332dp"
         android:layout_height="130dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -207,7 +207,7 @@
         app:srcCompat="@android:drawable/ic_input_add" />
 
     <ImageButton
-        android:id="@+id/imageButton11"
+        android:id="@+id/imageButtonToPageC"
         android:layout_width="332dp"
         android:layout_height="130dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -219,7 +219,7 @@
         tools:srcCompat="@tools:sample/backgrounds/scenic" />
 
     <TextView
-        android:id="@+id/textView50"
+        android:id="@+id/textViewToPageC"
         android:layout_width="146dp"
         android:layout_height="43dp"
         android:text="症狀查詢"
@@ -232,7 +232,7 @@
         app:layout_constraintVertical_bias="0.196" />
 
     <TextView
-        android:id="@+id/textView51"
+        android:id="@+id/textViewToPageE"
         android:layout_width="146dp"
         android:layout_height="43dp"
         android:text="日常護理"
@@ -245,7 +245,7 @@
         app:layout_constraintVertical_bias="0.421" />
 
     <TextView
-        android:id="@+id/textView52"
+        android:id="@+id/textViewToPageG"
         android:layout_width="146dp"
         android:layout_height="43dp"
         android:text="保健須知"
@@ -258,7 +258,7 @@
         app:layout_constraintVertical_bias="0.646" />
 
     <ImageView
-        android:id="@+id/imageView7"
+        android:id="@+id/imageViewToPageC"
         android:layout_width="53dp"
         android:layout_height="48dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -270,7 +270,7 @@
         app:srcCompat="@drawable/ic_baseline_search_24" />
 
     <ImageView
-        android:id="@+id/imageView8"
+        android:id="@+id/imageViewToPageE"
         android:layout_width="53dp"
         android:layout_height="48dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -282,7 +282,7 @@
         app:srcCompat="@drawable/ic_baseline_search_24" />
 
     <ImageView
-        android:id="@+id/imageView9"
+        android:id="@+id/imageViewToPageG"
         android:layout_width="53dp"
         android:layout_height="48dp"
         app:layout_constraintBottom_toBottomOf="parent"
