--- a/111502_SystemCode(18)/app/src/main/res/layout/activity_main_c.xml
+++ b/111502_SystemCode(18)/app/src/main/res/layout/activity_main_c.xml
@@ -7,7 +7,7 @@
     tools:context=".MainActivityC">
 
     <ImageButton
-        android:id="@+id/imageButton19"
+        android:id="@+id/imageButtonBackC"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -19,7 +19,7 @@
         app:srcCompat="@drawable/ic_baseline_west_24" />
 
     <ImageButton
-        android:id="@+id/imageButton18"
+        android:id="@+id/imageButtonADC"
         android:layout_width="387dp"
         android:layout_height="65dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -43,7 +43,7 @@
         app:layout_constraintVertical_bias="1.0" />
 
     <ImageButton
-        android:id="@+id/imageButton6"
+        android:id="@+id/imageButtonToPageJC"
         android:layout_width="68dp"
         android:layout_height="69dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -56,7 +56,7 @@
         tools:srcCompat="@drawable/ic_baseline_group_24" />
 
     <ImageButton
-        android:id="@+id/imageButton7"
+        android:id="@+id/imageButtonToPageOC"
         android:layout_width="68dp"
         android:layout_height="69dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -69,7 +69,7 @@
         tools:srcCompat="@drawable/ic_baseline_person_24" />
 
     <ImageButton
-        android:id="@+id/imageButton8"
+        android:id="@+id/imageButtonToPageHC"
         android:layout_width="68dp"
         android:layout_height="69dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -82,7 +82,7 @@
         tools:srcCompat="@drawable/ic_baseline_360_24" />
 
     <ImageButton
-        android:id="@+id/imageButton10"
+        android:id="@+id/imageButtonToPageAC"
         android:layout_width="68dp"
         android:layout_height="69dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -95,7 +95,7 @@
         tools:srcCompat="@drawable/ic_baseline_house_24" />
 
     <ImageButton
-        android:id="@+id/imageButton17"
+        android:id="@+id/imageButtonToPageBC"
         android:layout_width="68dp"
         android:layout_height="69dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -108,7 +108,7 @@
         tools:srcCompat="@drawable/ic_baseline_local_hospital_24" />
 
     <TextView
-        android:id="@+id/textView19"
+        android:id="@+id/textViewToPageBC"
         android:layout_width="49dp"
         android:layout_height="18dp"
         android:text="保健區"
@@ -120,7 +120,7 @@
         app:layout_constraintVertical_bias="0.992" />
 
     <TextView
-        android:id="@+id/textView20"
+        android:id="@+id/textViewToPageJC"
         android:layout_width="50dp"
         android:layout_height="15dp"
         android:text="領養區"
@@ -132,7 +132,7 @@
         app:layout_constraintVertical_bias="0.99" />
 
     <TextView
-        android:id="@+id/textView21"
+        android:id="@+id/textViewToPageAC"
         android:layout_width="63dp"
         android:layout_height="16dp"
         android:text="動態消息"
@@ -144,7 +144,7 @@
         app:layout_constraintVertical_bias="0.99" />
 
     <TextView
-        android:id="@+id/textView22"
+        android:id="@+id/textViewToPageOC"
         android:layout_width="63dp"
         android:layout_height="16dp"
         android:text="個人資料"
@@ -156,7 +156,7 @@
         app:layout_constraintVertical_bias="0.99" />
 
     <TextView
-        android:id="@+id/textView24"
+        android:id="@+id/textViewToPageHC"
         android:layout_width="63dp"
         android:layout_height="16dp"
         android:text="殯葬服務"
@@ -165,45 +165,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.99" />
-
-    <Button
-        android:id="@+id/button21"
-        android:layout_width="142dp"
-        android:layout_height="39dp"
-        android:text="貓愛滋"
-        app:backgroundTint="#8BC34A"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.806"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.559" />
-
-    <Button
-        android:id="@+id/button22"
-        android:layout_width="142dp"
-        android:layout_height="39dp"
-        android:text="貓瘟"
-        app:backgroundTint="#8BC34A"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.806"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.632" />
-
-    <Button
-        android:id="@+id/button18"
-        android:layout_width="142dp"
-        android:layout_height="39dp"
-        android:text="貓白血病"
-        app:backgroundTint="#8BC34A"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.204"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.559" />
 
     <TextView
         android:id="@+id/textView18"
@@ -217,7 +178,46 @@
         app:layout_constraintVertical_bias="0.67" />
 
     <Button
-        android:id="@+id/button19"
+        android:id="@+id/buttonCatSymptom2C"
+        android:layout_width="142dp"
+        android:layout_height="39dp"
+        android:text="貓愛滋"
+        app:backgroundTint="#8BC34A"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.806"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.559" />
+
+    <Button
+        android:id="@+id/buttonCatSymptom4C"
+        android:layout_width="142dp"
+        android:layout_height="39dp"
+        android:text="貓瘟"
+        app:backgroundTint="#8BC34A"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.806"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.632" />
+
+    <Button
+        android:id="@+id/buttonCatSymptom1C"
+        android:layout_width="142dp"
+        android:layout_height="39dp"
+        android:text="貓白血病"
+        app:backgroundTint="#8BC34A"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.204"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.559" />
+
+    <Button
+        android:id="@+id/buttonCatSymptom6C"
         android:layout_width="142dp"
         android:layout_height="39dp"
         android:text="貓傳染性腹膜炎"
@@ -230,7 +230,7 @@
         app:layout_constraintVertical_bias="0.709" />
 
     <Button
-        android:id="@+id/button17"
+        android:id="@+id/buttonCatSymptom3C"
         android:layout_width="142dp"
         android:layout_height="39dp"
         android:text="貓卡里西病"
@@ -243,7 +243,7 @@
         app:layout_constraintVertical_bias="0.632" />
 
     <Button
-        android:id="@+id/button20"
+        android:id="@+id/buttonCatSymptom5C"
         android:layout_width="142dp"
         android:layout_height="39dp"
         android:text="貓鼻氣管炎"
@@ -271,7 +271,7 @@
         app:layout_constraintVertical_bias="0.217" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName2"
+        android:id="@+id/editTextSearchC"
         android:layout_width="304dp"
         android:layout_height="44dp"
         android:ems="10"
@@ -284,7 +284,7 @@
         app:layout_constraintVertical_bias="0.112" />
 
     <SearchView
-        android:id="@+id/searchView"
+        android:id="@+id/searchViewA"
         android:layout_width="26dp"
         android:layout_height="34dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -309,7 +309,7 @@
         app:layout_constraintVertical_bias="0.023" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/buttonSearchC"
         android:layout_width="63dp"
         android:layout_height="39dp"
         android:text="搜尋"
@@ -344,7 +344,7 @@
         app:layout_constraintVertical_bias="0.341" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/buttonDogSymptom1C"
         android:layout_width="142dp"
         android:layout_height="39dp"
         android:text="犬感染性肝炎"
@@ -357,7 +357,7 @@
         app:layout_constraintVertical_bias="0.293" />
 
     <Button
-        android:id="@+id/button10"
+        android:id="@+id/buttonDogSymptom6C"
         android:layout_width="142dp"
         android:layout_height="39dp"
         android:text="犬冠狀病毒腸炎"
@@ -370,7 +370,7 @@
         app:layout_constraintVertical_bias="0.443" />
 
     <Button
-        android:id="@+id/button9"
+        android:id="@+id/buttonDogSymptom4C"
         android:layout_width="142dp"
         android:layout_height="39dp"
         android:text="犬疥癬蟲症"
@@ -383,7 +383,7 @@
         app:layout_constraintVertical_bias="0.367" />
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/buttonDogSymptom2C"
         android:layout_width="142dp"
         android:layout_height="39dp"
         android:text="狂犬病"
@@ -396,7 +396,7 @@
         app:layout_constraintVertical_bias="0.293" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/buttonDogSymptom3C"
         android:layout_width="142dp"
         android:layout_height="39dp"
         android:text="犬瘟熱"
@@ -409,7 +409,7 @@
         app:layout_constraintVertical_bias="0.367" />
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/buttonDogSymptom5C"
         android:layout_width="142dp"
         android:layout_height="39dp"
         android:text="毛囊蟲症"
