--- a/111502_SystemCode(18)/app/src/main/res/layout/activity_main_d.xml
+++ b/111502_SystemCode(18)/app/src/main/res/layout/activity_main_d.xml
@@ -7,7 +7,7 @@
     tools:context=".MainActivityD">
 
     <ImageButton
-        android:id="@+id/imageButton33"
+        android:id="@+id/imageButtonBackD"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -31,7 +31,7 @@
         app:layout_constraintVertical_bias="1.0" />
 
     <ImageButton
-        android:id="@+id/imageButton20"
+        android:id="@+id/imageButtonToPageAD"
         android:layout_width="68dp"
         android:layout_height="69dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -44,7 +44,7 @@
         tools:srcCompat="@drawable/ic_baseline_house_24" />
 
     <ImageButton
-        android:id="@+id/imageButton21"
+        android:id="@+id/imageButtonToPageOD"
         android:layout_width="68dp"
         android:layout_height="69dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -57,7 +57,7 @@
         tools:srcCompat="@drawable/ic_baseline_person_24" />
 
     <ImageButton
-        android:id="@+id/imageButton23"
+        android:id="@+id/imageButtonToPageJD"
         android:layout_width="68dp"
         android:layout_height="69dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -70,7 +70,7 @@
         tools:srcCompat="@drawable/ic_baseline_group_24" />
 
     <ImageButton
-        android:id="@+id/imageButton24"
+        android:id="@+id/imageButtonADD"
         android:layout_width="387dp"
         android:layout_height="65dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -82,7 +82,7 @@
         tools:srcCompat="@tools:sample/backgrounds/scenic" />
 
     <ImageButton
-        android:id="@+id/imageButton25"
+        android:id="@+id/imageButtonToPageBD"
         android:layout_width="68dp"
         android:layout_height="69dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -95,7 +95,7 @@
         tools:srcCompat="@drawable/ic_baseline_local_hospital_24" />
 
     <ImageButton
-        android:id="@+id/imageButton26"
+        android:id="@+id/imageButtonToPageHD"
         android:layout_width="68dp"
         android:layout_height="69dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -108,7 +108,7 @@
         tools:srcCompat="@drawable/ic_baseline_360_24" />
 
     <TextView
-        android:id="@+id/textView26"
+        android:id="@+id/textViewToPageOD"
         android:layout_width="63dp"
         android:layout_height="16dp"
         android:text="個人資料"
@@ -120,7 +120,7 @@
         app:layout_constraintVertical_bias="0.99" />
 
     <TextView
-        android:id="@+id/textView29"
+        android:id="@+id/textViewToPageBD"
         android:layout_width="49dp"
         android:layout_height="18dp"
         android:text="保健區"
@@ -132,7 +132,7 @@
         app:layout_constraintVertical_bias="0.992" />
 
     <TextView
-        android:id="@+id/textView30"
+        android:id="@+id/textViewToPageAD"
         android:layout_width="63dp"
         android:layout_height="16dp"
         android:text="動態消息"
@@ -144,7 +144,7 @@
         app:layout_constraintVertical_bias="0.99" />
 
     <TextView
-        android:id="@+id/textView28"
+        android:id="@+id/textViewToPageHD"
         android:layout_width="63dp"
         android:layout_height="16dp"
         android:text="殯葬服務"
@@ -155,7 +155,7 @@
         app:layout_constraintVertical_bias="0.99" />
 
     <TextView
-        android:id="@+id/textView31"
+        android:id="@+id/textViewToPageJD"
         android:layout_width="50dp"
         android:layout_height="15dp"
         android:text="領養區"
@@ -179,7 +179,7 @@
         app:layout_constraintVertical_bias="0.624" />
 
     <TextView
-        android:id="@+id/textView35"
+        android:id="@+id/textViewSymptomTitle2D"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="牙齦炎"
@@ -202,19 +202,8 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.25" />
 
-    <SearchView
-        android:id="@+id/searchView"
-        android:layout_width="26dp"
-        android:layout_height="34dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.075"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.117" />
-
     <Button
-        android:id="@+id/button11"
+        android:id="@+id/buttonSearchD"
         android:layout_width="63dp"
         android:layout_height="39dp"
         android:text="搜尋"
@@ -226,7 +215,7 @@
         app:layout_constraintVertical_bias="0.111" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName3"
+        android:id="@+id/editTextSearchD"
         android:layout_width="304dp"
         android:layout_height="44dp"
         android:ems="10"
@@ -238,6 +227,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.112" />
+
+    <SearchView
+        android:id="@+id/searchViewA"
+        android:layout_width="26dp"
+        android:layout_height="34dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.075"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.117" />
 
     <TextView
         android:id="@+id/textView14"
@@ -254,7 +254,7 @@
         app:layout_constraintVertical_bias="0.023" />
 
     <TextView
-        android:id="@+id/textView33"
+        android:id="@+id/textViewSymptomTitle1D"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="口腔黏膜發炎（潰瘍性口炎）"
@@ -266,7 +266,7 @@
         app:layout_constraintVertical_bias="0.23" />
 
     <TextView
-        android:id="@+id/textView34"
+        android:id="@+id/textViewSymptomText1D"
         android:layout_width="309dp"
         android:layout_height="82dp"
         android:text="您家的毛寶貝若有潰瘍性口炎，可能會出現如：流口水、口臭、口腔粘膜潮紅腫脹、輕度發熱、不敢進食...等現象。"
@@ -278,7 +278,7 @@
         app:layout_constraintVertical_bias="0.305" />
 
     <TextView
-        android:id="@+id/textView36"
+        android:id="@+id/textViewSymptomText2D"
         android:layout_width="312dp"
         android:layout_height="178dp"
         android:text="當你們家的毛寶貝，牙齦若出現紅腫、出血、因疼痛導致不敢吃東西時，要擔心口腔可能是已受到牙齦炎的破壞，牙齦炎會破壞毛寶貝的牙齦與支撐牙齒的組織，並產生膿腫的現象，若還不進行治療，還會繼續惡化入侵到牙齒的硬組織，變成牙周病，若發現毛寶貝的牙齦有上述情況時，請盡速帶毛寶貝就醫。"
