--- a/111502_SystemCode(18)/app/src/main/res/layout/activity_main_f.xml
+++ b/111502_SystemCode(18)/app/src/main/res/layout/activity_main_f.xml
@@ -19,7 +19,7 @@
         app:layout_constraintVertical_bias="1.0" />
 
     <ImageButton
-        android:id="@+id/imageButton39"
+        android:id="@+id/imageButtonToPageJF"
         android:layout_width="68dp"
         android:layout_height="69dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -32,7 +32,7 @@
         tools:srcCompat="@drawable/ic_baseline_group_24" />
 
     <ImageButton
-        android:id="@+id/imageButton54"
+        android:id="@+id/imageButtonToPageOF"
         android:layout_width="68dp"
         android:layout_height="69dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -45,7 +45,7 @@
         tools:srcCompat="@drawable/ic_baseline_person_24" />
 
     <ImageButton
-        android:id="@+id/imageButton55"
+        android:id="@+id/imageButtonToPageHF"
         android:layout_width="68dp"
         android:layout_height="69dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -58,7 +58,7 @@
         tools:srcCompat="@drawable/ic_baseline_360_24" />
 
     <ImageButton
-        android:id="@+id/imageButton56"
+        android:id="@+id/imageButtonToPageAF"
         android:layout_width="68dp"
         android:layout_height="69dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -71,7 +71,7 @@
         tools:srcCompat="@drawable/ic_baseline_house_24" />
 
     <ImageButton
-        android:id="@+id/imageButton57"
+        android:id="@+id/imageButtonToPageBF"
         android:layout_width="68dp"
         android:layout_height="69dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -84,7 +84,7 @@
         tools:srcCompat="@drawable/ic_baseline_local_hospital_24" />
 
     <TextView
-        android:id="@+id/textView120"
+        android:id="@+id/textViewToPageBF"
         android:layout_width="49dp"
         android:layout_height="18dp"
         android:text="保健區"
@@ -96,7 +96,7 @@
         app:layout_constraintVertical_bias="0.992" />
 
     <TextView
-        android:id="@+id/textView121"
+        android:id="@+id/textViewToPageJF"
         android:layout_width="50dp"
         android:layout_height="15dp"
         android:text="領養區"
@@ -108,7 +108,7 @@
         app:layout_constraintVertical_bias="0.99" />
 
     <TextView
-        android:id="@+id/textView122"
+        android:id="@+id/textViewToPageAF"
         android:layout_width="63dp"
         android:layout_height="16dp"
         android:text="動態消息"
@@ -120,7 +120,7 @@
         app:layout_constraintVertical_bias="0.99" />
 
     <TextView
-        android:id="@+id/textView123"
+        android:id="@+id/textViewToPageOF"
         android:layout_width="63dp"
         android:layout_height="16dp"
         android:text="個人資料"
@@ -132,7 +132,7 @@
         app:layout_constraintVertical_bias="0.99" />
 
     <TextView
-        android:id="@+id/textView125"
+        android:id="@+id/textViewToPageHF"
         android:layout_width="63dp"
         android:layout_height="16dp"
         android:text="殯葬服務"
@@ -143,7 +143,7 @@
         app:layout_constraintVertical_bias="0.99" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName60"
+        android:id="@+id/editTextDateF"
         android:layout_width="233dp"
         android:layout_height="43dp"
         android:ems="10"
@@ -157,7 +157,7 @@
         app:layout_constraintVertical_bias="0.543" />
 
     <TextView
-        android:id="@+id/textView118"
+        android:id="@+id/textViewDateF"
         android:layout_width="82dp"
         android:layout_height="21dp"
         android:text="接種日期"
@@ -172,7 +172,7 @@
         app:layout_constraintVertical_bias="0.543" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName59"
+        android:id="@+id/editTextPlaceF"
         android:layout_width="233dp"
         android:layout_height="43dp"
         android:ems="10"
@@ -186,7 +186,7 @@
         app:layout_constraintVertical_bias="0.465" />
 
     <TextView
-        android:id="@+id/textView117"
+        android:id="@+id/textViewPlaceF"
         android:layout_width="82dp"
         android:layout_height="21dp"
         android:text="施打地點"
@@ -201,7 +201,7 @@
         app:layout_constraintVertical_bias="0.467" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName58"
+        android:id="@+id/editTextVaccineF"
         android:layout_width="233dp"
         android:layout_height="43dp"
         android:ems="10"
@@ -215,7 +215,7 @@
         app:layout_constraintVertical_bias="0.385" />
 
     <TextView
-        android:id="@+id/textView116"
+        android:id="@+id/textViewVaccineF"
         android:layout_width="82dp"
         android:layout_height="21dp"
         android:text="疫苗類型"
@@ -230,7 +230,7 @@
         app:layout_constraintVertical_bias="0.39" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName57"
+        android:id="@+id/editTextPetVarietyF"
         android:layout_width="233dp"
         android:layout_height="43dp"
         android:ems="10"
@@ -244,7 +244,7 @@
         app:layout_constraintVertical_bias="0.306" />
 
     <TextView
-        android:id="@+id/textView115"
+        android:id="@+id/textViewPetVarietyF"
         android:layout_width="82dp"
         android:layout_height="21dp"
         android:text="寵物品種"
@@ -259,7 +259,7 @@
         app:layout_constraintVertical_bias="0.314" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName56"
+        android:id="@+id/editTextPetNameF"
         android:layout_width="233dp"
         android:layout_height="43dp"
         android:ems="10"
@@ -273,7 +273,7 @@
         app:layout_constraintVertical_bias="0.228" />
 
     <TextView
-        android:id="@+id/textView114"
+        android:id="@+id/textViewPetNameF"
         android:layout_width="82dp"
         android:layout_height="21dp"
         android:text="寵物名稱"
@@ -288,7 +288,7 @@
         app:layout_constraintVertical_bias="0.238" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName55"
+        android:id="@+id/editTextUserNameF"
         android:layout_width="233dp"
         android:layout_height="43dp"
         android:ems="10"
@@ -316,7 +316,7 @@
         app:layout_constraintVertical_bias="0.028" />
 
     <TextView
-        android:id="@+id/textView113"
+        android:id="@+id/textViewUserNameF"
         android:layout_width="82dp"
         android:layout_height="21dp"
         android:text="飼主姓名"
@@ -331,7 +331,7 @@
         app:layout_constraintVertical_bias="0.161" />
 
     <ImageButton
-        android:id="@+id/imageButton27"
+        android:id="@+id/imageButtonBackF"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
