--- a/111502_SystemCode(18)/app/src/main/res/layout/activity_main_g.xml
+++ b/111502_SystemCode(18)/app/src/main/res/layout/activity_main_g.xml
@@ -19,7 +19,7 @@
         app:layout_constraintVertical_bias="1.0" />
 
     <ImageButton
-        android:id="@+id/imageButton35"
+        android:id="@+id/imageButtonToPageJG"
         android:layout_width="68dp"
         android:layout_height="69dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -32,7 +32,7 @@
         tools:srcCompat="@drawable/ic_baseline_group_24" />
 
     <ImageButton
-        android:id="@+id/imageButton36"
+        android:id="@+id/imageButtonToPageOG"
         android:layout_width="68dp"
         android:layout_height="69dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -45,7 +45,7 @@
         tools:srcCompat="@drawable/ic_baseline_person_24" />
 
     <ImageButton
-        android:id="@+id/imageButton37"
+        android:id="@+id/imageButtonToPageHG"
         android:layout_width="68dp"
         android:layout_height="69dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -58,7 +58,7 @@
         tools:srcCompat="@drawable/ic_baseline_360_24" />
 
     <ImageButton
-        android:id="@+id/imageButton38"
+        android:id="@+id/imageButtonToPageBG"
         android:layout_width="68dp"
         android:layout_height="69dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -71,7 +71,7 @@
         tools:srcCompat="@drawable/ic_baseline_local_hospital_24" />
 
     <ImageButton
-        android:id="@+id/imageButton58"
+        android:id="@+id/imageButtonToPageAG"
         android:layout_width="68dp"
         android:layout_height="69dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -84,7 +84,7 @@
         tools:srcCompat="@drawable/ic_baseline_house_24" />
 
     <TextView
-        android:id="@+id/textView67"
+        android:id="@+id/textViewToPageBG"
         android:layout_width="49dp"
         android:layout_height="18dp"
         android:text="保健區"
@@ -96,7 +96,7 @@
         app:layout_constraintVertical_bias="0.992" />
 
     <TextView
-        android:id="@+id/textView68"
+        android:id="@+id/textViewToPageJG"
         android:layout_width="50dp"
         android:layout_height="15dp"
         android:text="領養區"
@@ -108,7 +108,7 @@
         app:layout_constraintVertical_bias="0.99" />
 
     <TextView
-        android:id="@+id/textView69"
+        android:id="@+id/textViewToPageAG"
         android:layout_width="63dp"
         android:layout_height="16dp"
         android:text="動態消息"
@@ -120,7 +120,7 @@
         app:layout_constraintVertical_bias="0.99" />
 
     <TextView
-        android:id="@+id/textView70"
+        android:id="@+id/textViewToPageOG"
         android:layout_width="63dp"
         android:layout_height="16dp"
         android:text="個人資料"
@@ -132,7 +132,7 @@
         app:layout_constraintVertical_bias="0.99" />
 
     <TextView
-        android:id="@+id/textView72"
+        android:id="@+id/textViewToPageHG"
         android:layout_width="63dp"
         android:layout_height="16dp"
         android:text="殯葬服務"
@@ -155,7 +155,7 @@
         app:layout_constraintVertical_bias="0.131" />
 
     <Button
-        android:id="@+id/button27"
+        android:id="@+id/buttonHealthNoticeG"
         android:layout_width="76dp"
         android:layout_height="31dp"
         android:text="健康檢查"
@@ -169,7 +169,7 @@
         app:layout_constraintVertical_bias="0.178" />
 
     <Button
-        android:id="@+id/button28"
+        android:id="@+id/buttonPetDentistryG"
         android:layout_width="76dp"
         android:layout_height="31dp"
         android:text="寵物牙科"
@@ -183,7 +183,7 @@
         app:layout_constraintVertical_bias="0.178" />
 
     <Button
-        android:id="@+id/button26"
+        android:id="@+id/buttonWeightControlG"
         android:layout_width="76dp"
         android:layout_height="31dp"
         android:text="體重控制"
@@ -197,7 +197,7 @@
         app:layout_constraintVertical_bias="0.178" />
 
     <Button
-        android:id="@+id/button25"
+        android:id="@+id/buttonWaferNoticeG"
         android:layout_width="76dp"
         android:layout_height="31dp"
         android:text="晶片須知"
@@ -211,7 +211,7 @@
         app:layout_constraintVertical_bias="0.178" />
 
     <Button
-        android:id="@+id/button23"
+        android:id="@+id/buttonSummerNoticeG"
         android:layout_width="76dp"
         android:layout_height="31dp"
         android:text="夏日須知"
@@ -225,7 +225,7 @@
         app:layout_constraintVertical_bias="0.124" />
 
     <Button
-        android:id="@+id/button24"
+        android:id="@+id/buttonAutumnWinterNoticeG"
         android:layout_width="76dp"
         android:layout_height="31dp"
         android:text="秋冬須知"
@@ -264,7 +264,7 @@
         app:layout_constraintVertical_bias="0.023" />
 
     <ImageButton
-        android:id="@+id/imageButton34"
+        android:id="@+id/imageButtonBackG"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -276,7 +276,7 @@
         app:srcCompat="@drawable/ic_baseline_west_24" />
 
     <Button
-        android:id="@+id/button12"
+        android:id="@+id/buttonVaccineNoticeG"
         android:layout_width="76dp"
         android:layout_height="31dp"
         android:text="疫苗須知"
@@ -290,7 +290,7 @@
         app:layout_constraintVertical_bias="0.124" />
 
     <Button
-        android:id="@+id/button16"
+        android:id="@+id/buttonInsectPreventionNoticeG"
         android:layout_width="76dp"
         android:layout_height="31dp"
         android:text="防蟲須知"
@@ -304,7 +304,7 @@
         app:layout_constraintVertical_bias="0.124" />
 
     <TextView
-        android:id="@+id/textView65"
+        android:id="@+id/textViewTitleG"
         android:layout_width="86dp"
         android:layout_height="25dp"
         android:text="疫苗須知"
@@ -317,11 +317,14 @@
         app:layout_constraintVertical_bias="0.251" />
 
     <TextView
-        android:id="@+id/textView66"
+        android:id="@+id/textViewTextG"
         android:layout_width="333dp"
         android:layout_height="391dp"
         android:text="毛寶貝剛出生時，會從母乳中獲得「移行抗體」(可以幫助抵抗、防禦部分傳染病)，不過「移行抗體」會隨著時間而逐漸減少，此時會增加感染疾病的風險，為了幫毛寶貝增加抵抗力、降低傳染風險就需要注射疫苗。雖然施打疫苗不等於100%完全預防疾病，不過有施打疫苗就是給毛寶貝多一層保護，因為部分傳染病，可能會有：迅速傳播、人畜共通、死亡率高…等問題，如：犬小病毒(CPV-2)、犬瘟熱(CDV)、狂犬病(Rabies)、貓瘟(FP)、貓白血病FeLV等傳染病。你知道寶貝該施打那些疫苗嗎？根據2015年 wsava世界小動物獸醫協會的VGG疫苗指南研議小組發表的「犬貓疫苗注射指南」，當中提到疫苗可分為核心疫苗跟非核心疫苗，核心疫苗是無論在任何情況、處於任何國家，所有的犬貓都應該接受注射的疫苗，可以保護犬貓免受嚴重、致死性的全球性疾病危害，如:犬瘟熱病毒、犬腺病毒、犬小病毒、貓瘟、貓皰疹病毒、貓卡西里病毒。 ※ 特別注意：在狂犬病流行疫區，無"
         android:textSize="15sp"
-        tools:layout_editor_absoluteX="41dp"
-        tools:layout_editor_absoluteY="223dp" />
+        app:layout_constraintBottom_toBottomOf="@+id/textView64"
+        app:layout_constraintEnd_toEndOf="@+id/textView64"
+        app:layout_constraintStart_toStartOf="@+id/textView64"
+        app:layout_constraintTop_toTopOf="@+id/textView64"
+        app:layout_constraintVertical_bias="0.753" />
 </androidx.constraintlayout.widget.ConstraintLayout>
