--- a/111502_SystemCode(18)/app/src/main/res/layout/activity_main_m.xml
+++ b/111502_SystemCode(18)/app/src/main/res/layout/activity_main_m.xml
@@ -18,7 +18,7 @@
         app:srcCompat="@drawable/ic_baseline_pets_24" />
 
     <TextView
-        android:id="@+id/textView158"
+        android:id="@+id/textViewForgetPasswordM"
         android:layout_width="74dp"
         android:layout_height="24dp"
         android:text="忘記密碼"
@@ -31,7 +31,7 @@
         app:layout_constraintVertical_bias="0.864" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName5"
+        android:id="@+id/editTextPasswordM"
         android:layout_width="276dp"
         android:layout_height="48dp"
         android:ems="10"
@@ -45,7 +45,7 @@
         app:layout_constraintVertical_bias="0.512" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName4"
+        android:id="@+id/editTextAccountM"
         android:layout_width="276dp"
         android:layout_height="48dp"
         android:ems="10"
@@ -59,7 +59,7 @@
         app:layout_constraintVertical_bias="0.418" />
 
     <ImageButton
-        android:id="@+id/imageButton86"
+        android:id="@+id/imageButtonBackM"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -71,15 +71,19 @@
         app:srcCompat="@drawable/ic_baseline_west_24" />
 
     <Button
-        android:id="@+id/button15"
+        android:id="@+id/buttonLoginM"
         android:layout_width="276dp"
         android:layout_height="50dp"
         android:text="登入"
-        tools:layout_editor_absoluteX="67dp"
-        tools:layout_editor_absoluteY="455dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.679" />
 
     <TextView
-        android:id="@+id/textView140"
+        android:id="@+id/textViewCreateAccountM"
         android:layout_width="92dp"
         android:layout_height="24dp"
         android:text="建立新帳號"
@@ -92,7 +96,7 @@
         app:layout_constraintVertical_bias="0.809" />
 
     <CheckBox
-        android:id="@+id/checkBox"
+        android:id="@+id/checkBoxRememberM"
         android:layout_width="80dp"
         android:layout_height="28dp"
         android:text="記住我"
