--- a/111502_SystemCode(18)/app/src/main/res/layout/activity_main_o.xml
+++ b/111502_SystemCode(18)/app/src/main/res/layout/activity_main_o.xml
@@ -19,7 +19,7 @@
         app:layout_constraintVertical_bias="1.0" />
 
     <ImageButton
-        android:id="@+id/imageButton88"
+        android:id="@+id/imageButtonToPageJO"
         android:layout_width="68dp"
         android:layout_height="69dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -32,7 +32,7 @@
         tools:srcCompat="@drawable/ic_baseline_group_24" />
 
     <ImageButton
-        android:id="@+id/imageButton89"
+        android:id="@+id/imageButtonToPageBO"
         android:layout_width="68dp"
         android:layout_height="69dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -45,7 +45,7 @@
         tools:srcCompat="@drawable/ic_baseline_local_hospital_24" />
 
     <ImageButton
-        android:id="@+id/imageButton90"
+        android:id="@+id/imageButtonToPageOO"
         android:layout_width="68dp"
         android:layout_height="69dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -58,7 +58,7 @@
         tools:srcCompat="@drawable/ic_baseline_person_24" />
 
     <ImageButton
-        android:id="@+id/imageButton98"
+        android:id="@+id/imageButtonToPageHO"
         android:layout_width="68dp"
         android:layout_height="69dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -71,7 +71,7 @@
         tools:srcCompat="@drawable/ic_baseline_360_24" />
 
     <ImageButton
-        android:id="@+id/imageButton99"
+        android:id="@+id/imageButtonToPageAO"
         android:layout_width="68dp"
         android:layout_height="69dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -84,7 +84,7 @@
         tools:srcCompat="@drawable/ic_baseline_house_24" />
 
     <TextView
-        android:id="@+id/textView186"
+        android:id="@+id/textViewToPageHO"
         android:layout_width="63dp"
         android:layout_height="16dp"
         android:text="殯葬服務"
@@ -95,7 +95,7 @@
         app:layout_constraintVertical_bias="0.99" />
 
     <TextView
-        android:id="@+id/textView188"
+        android:id="@+id/textViewToPageOO"
         android:layout_width="63dp"
         android:layout_height="16dp"
         android:text="個人資料"
@@ -107,7 +107,7 @@
         app:layout_constraintVertical_bias="0.99" />
 
     <TextView
-        android:id="@+id/textView189"
+        android:id="@+id/textViewToPageBO"
         android:layout_width="49dp"
         android:layout_height="18dp"
         android:text="保健區"
@@ -119,7 +119,7 @@
         app:layout_constraintVertical_bias="0.992" />
 
     <TextView
-        android:id="@+id/textView190"
+        android:id="@+id/textViewToPageJO"
         android:layout_width="50dp"
         android:layout_height="15dp"
         android:text="領養區"
@@ -131,7 +131,7 @@
         app:layout_constraintVertical_bias="0.99" />
 
     <TextView
-        android:id="@+id/textView191"
+        android:id="@+id/textViewToPageAO"
         android:layout_width="63dp"
         android:layout_height="16dp"
         android:text="動態消息"
@@ -143,7 +143,7 @@
         app:layout_constraintVertical_bias="0.99" />
 
     <Button
-        android:id="@+id/button35"
+        android:id="@+id/buttonLogoutO"
         android:layout_width="368dp"
         android:layout_height="50dp"
         android:text="登出"
@@ -157,7 +157,7 @@
         app:layout_constraintVertical_bias="0.886" />
 
     <Button
-        android:id="@+id/button33"
+        android:id="@+id/buttonCreatePetDataO"
         android:layout_width="368dp"
         android:layout_height="55dp"
         android:text="    新增寵物資料  +"
@@ -183,7 +183,7 @@
         app:layout_constraintVertical_bias="0.499" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName10"
+        android:id="@+id/editTextEmailO"
         android:layout_width="206dp"
         android:layout_height="39dp"
         android:ems="10"
@@ -198,16 +198,20 @@
         app:layout_constraintVertical_bias="0.218" />
 
     <Button
-        android:id="@+id/button30"
+        android:id="@+id/buttonEditUserDataO"
         android:layout_width="206dp"
         android:layout_height="42dp"
         android:text="編輯資料"
         app:backgroundTint="#BFBDBD"
-        tools:layout_editor_absoluteX="182dp"
-        tools:layout_editor_absoluteY="196dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.887"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.285" />
 
     <Button
-        android:id="@+id/button32"
+        android:id="@+id/buttonEditPetDataO"
         android:layout_width="346dp"
         android:layout_height="42dp"
         android:text="編輯資料"
@@ -220,7 +224,7 @@
         app:layout_constraintVertical_bias="0.626" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName9"
+        android:id="@+id/editTextUserNameO"
         android:layout_width="206dp"
         android:layout_height="39dp"
         android:ems="10"
@@ -235,7 +239,7 @@
         app:layout_constraintVertical_bias="0.161" />
 
     <ImageView
-        android:id="@+id/imageView15"
+        android:id="@+id/imageViewUserO"
         android:layout_width="120dp"
         android:layout_height="120dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -247,7 +251,7 @@
         tools:srcCompat="@tools:sample/avatars" />
 
     <ImageView
-        android:id="@+id/imageView19"
+        android:id="@+id/imageViewPet"
         android:layout_width="110dp"
         android:layout_height="110dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -304,7 +308,7 @@
         app:layout_constraintVertical_bias="0.375" />
 
     <TextView
-        android:id="@+id/textView184"
+        android:id="@+id/textViewPetVarietyO"
         android:layout_width="165dp"
         android:layout_height="17dp"
         android:background="#D5D5D5"
@@ -318,7 +322,7 @@
         app:layout_constraintVertical_bias="0.508" />
 
     <TextView
-        android:id="@+id/textView174"
+        android:id="@+id/textViewPetLigationO"
         android:layout_width="56dp"
         android:layout_height="17dp"
         android:background="#D5D5D5"
@@ -332,7 +336,7 @@
         app:layout_constraintVertical_bias="0.469" />
 
     <TextView
-        android:id="@+id/textView185"
+        android:id="@+id/textViewPetWaferO"
         android:layout_width="165dp"
         android:layout_height="17dp"
         android:background="#D5D5D5"
@@ -346,7 +350,7 @@
         app:layout_constraintVertical_bias="0.549" />
 
     <TextView
-        android:id="@+id/textView166"
+        android:id="@+id/textViewPetO"
         android:layout_width="56dp"
         android:layout_height="17dp"
         android:background="#D5D5D5"
@@ -360,7 +364,7 @@
         app:layout_constraintVertical_bias="0.434" />
 
     <TextView
-        android:id="@+id/textView163"
+        android:id="@+id/textViewPetNameO"
         android:layout_width="56dp"
         android:layout_height="17dp"
         android:background="#D5D5D5"
@@ -374,7 +378,7 @@
         app:layout_constraintVertical_bias="0.434" />
 
     <TextView
-        android:id="@+id/textView173"
+        android:id="@+id/textViewPetGenderO"
         android:layout_width="56dp"
         android:layout_height="17dp"
         android:background="#D5D5D5"
